--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>First JS Program </h1>
-    <!-- <script>
+    <script>
         alert("Hey , this is an alert")
-    </script> -->
+    </script>
 </body>
 </html>
